--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.28",
     "antd": "^4.24.14",
+    "bootstrap": "^5.3.3",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-xhr-backend": "^3.2.2",
     "react": "^18.2.0",
     "react-awesome-reveal": "^3.8.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-router-dom": "^5.3.4",
